# pie

./: .gitignore  .pre-commit-config.yaml  README.md  REQUIREMENTS.md  example-config.cfg  pyproject.toml
data/: gold_data.json  pred-text-davinci-003.json
notebooks/: chain.ipynb  evaluate.ipynb
pie/: __init__.py  base.py  config.py  easy_bake.py  filling.py  recipes.py  slice.py  toppings.py
pie-spacy/: README.md  config.py  examples.json  fewshot.cfg  run_pipeline.py
pie/utensils/: loggers.py
tests/test_data/: generate_testing_data.py  processing.py
