[tool.poetry]
name = "pie"
version = "0.1.0"
description = ""
authors = ["nicolai <nicolaibthomsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.304"
openai = "^0.28.1"
loguru = "^0.7.2"
rich = "^13.5.3"
pandas = "2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.2"
nervaluate = "^0.1.8"
ipykernel = "^6.25.2"

[tool.poetry.group.spacy]
optional = true

[tool.poetry.group.spacy.dependencies]
typer = "^0.9.0"
wasabi = "^1.1.2"
spacy-llm = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
